syntax = "proto3";

package filemanagement;

option java_package = "edu.kit.palladio.proto.filemanagement";
option java_outer_classname = "FileManagementProtos";
option java_multiple_files = true;

message File{
    string path = 1;
    bool isDirectory = 2;
}

message FileChunck{
    string path = 1;
    bytes content = 2;
}

message FileTreeRequest{
    File startingDir = 1;

}

message CreateFileResponse{

}
message WriteResponse{

}
message DeleteFileResponse{

}
/*
message Directory{
    string name = 1;
    repeated DirectoryChild children = 2;
}

message DirectoryChild{
    oneof child_oneof {
        Directory name = 1;
        File sub_message = 2;
    }
}
*/
service RemoteFileUpload{
    rpc createFile(File) returns (CreateFileResponse){}
    rpc deleteFile(File) returns (DeleteFileResponse){}
    rpc write(stream FileChunck) returns (WriteResponse){}
    rpc read(File) returns (stream FileChunck){}
    rpc walkFileTree(FileTreeRequest) returns (stream File) {}
}